Fixed wrapping output text

--- a/css/app.css
+++ b/css/app.css
@@ -6,7 +6,7 @@ textarea
 
 .outputPanel
 {
-    white-space: pre
+    white-space: pre-wrap;
 }
 
 .flowTransition
